<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="303dp"
        android:layout_height="52dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameTextView"
        android:inputType="textPersonName"
        android:soundEffectsEnabled="false"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/valueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valueTextView"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/valueTextView"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="@id/nameTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/nameTextView"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="388dp"
        android:background="#000000"
        android:text="@string/op_es"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueTextView"
        app:layout_constraintVertical_bias="0.49"
        app:rippleColor="#000000" />
</androidx.constraintlayout.widget.ConstraintLayout>